# customer-churn

./: Customer_churn.html  app.py  pyproject.toml  requirements.txt
models/: xgb_pipeline.pkl
notebook/: n1.ipynb
src/: data_loader.py  evaluation.py  main.py  model.py  preprocessing.py  visualization.py
